@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

Package Model as ModelPackage <<Rectangle>>{
    class Meeting
    class Person
    class Attendee
    class Name
}

Meeting *--> "0..* "Attendee
Person *--> "1" Name
Name .> Attendee
@enduml
